--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+pydataset==0.2.0
 plotly>5.4.0
 plotly_express>0.4
 numpy>1.23
@@ -5,4 +6,3 @@ matplotlib>3.5
 pandas>1.4
 seaborn == 0.11.2
 scikit-learn>0.24.2
-pydataset>0.17
